[tool.poetry]
name = "CrystaLLM"
version = "0.1.0"
description = ""
authors = ["Luis Antunes <lantunes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
pymatgen = "2023.3.23"
matplotlib = "3.7.1"
mp-api = "0.30.11"
numpy = "1.24.2"
scikit-learn = "1.2.2"
tqdm = "4.65.0"
torch = "2.0.1"
tiktoken = "0.3.3"
transformers = "4.33.1"
matplotlib-venn = "0.11.9"
pyzmq = "25.1.1"
omegaconf = "2.3.0"
pyyaml = "6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
